--- a/client/mRoute.css
+++ b/client/mRoute.css
@@ -10,3 +10,7 @@ padding: 10px;
 margin-bottom: 10px;
 box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
   }
+
+  .route {
+  	border: 1px solid blue;
+  }
