--- a/client/mRoute.css
+++ b/client/mRoute.css
@@ -14,13 +14,14 @@ body {
     border-radius: 0px 0px 3px 3px;
 }
 #spinner { height: 300px }
+
 .route {
     *zoom: 1;
-    -webkit-transition: all 300ms 0ms;
+  /*  -webkit-transition: all 50ms 0ms;
     -webkit-transition-delay: ease-in;
-    -moz-transition: all 300ms 0ms ease-in;
-    -o-transition: all 300ms 0ms ease-in;
-    transition: all 300ms 0ms ease-in;
+    -moz-transition: all 50ms 0ms ease-in;
+    -o-transition: all 50ms 0ms ease-in;
+    transition: all 50ms 0ms ease-in; */ 
     position: relative;
     opacity: 1;
 }
@@ -28,6 +29,17 @@ body {
     content: "";
     display: table;
 }
+
+.route:hover {
+	background: #808080;
+	color: #ffffff;
+}
+
+.route:active {
+	background: blue;
+	top: 2px;
+}
+
 .route:after { clear: both }
 .route.invisible { opacity: 0 }
 .route .upvote {
