--- a/client/mRoute.css
+++ b/client/mRoute.css
@@ -54,18 +54,6 @@ a:active {
     opacity: 1;
 }
 
-.table-hover > tbody > tr:hover > td, .table-hover > tbody > tr:hover > th {
-	background: blue;
-	top: 2px;
-}
-
-.route {
-    display: block;
-    margin: 7px 12px 0 0;
-    float: left;
-    width: 100%;
-}
-
 input.form-control {
     height: 45px;
     margin: 10px;
@@ -73,4 +61,18 @@ input.form-control {
 
 .table {
     display: none;
+}
+
+.routesTable {
+    padding: 100px;
+}
+
+.about {
+    padding: 100px;
+    text-align: left;
+}
+
+footer {
+    text-align: right;
+    padding-right: 100px;
 }
