--- a/client/mRoute.css
+++ b/client/mRoute.css
@@ -73,6 +73,15 @@ input.form-control {
     text-align: left;
 }
 
+#login {
+    position: relative;
+    display: block;
+    padding: 10px 15px 10px;
+    /* color: #777777; */ 
+    text-decoration: none;
+    text-shadow: 0 1px 0 #ffffff;
+}
+
 footer {
     text-align: right;
     padding-right: 100px;
